--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,17 @@
 *.asv
-
 *.rar
-
 *.jpg
-
 *.psd
-
 *.ai
-
 .DS_Store
-
 ~$*
-
 *.xlsx
-
 *untrack.*
 *.eps
+*.aux
+*.bbl
+*.blg
+*.pdf
+*.gz
+*.bak
+*.log
