--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
 *.asv
+*.rar
 *.jpg
 *.psd
-*.fig
+*.ai
 .DS_Store
+~$*
+*.xlsx
+*untrack.*
+*.eps
+*.aux
+*.bbl
+*.blg
+*.pdf
+*.gz
+*.bak
+*.log
+*.out
